# bwe

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  styles.css  zip_20874.geojson
.github/workflows/: daily-digest.yml  pages.yml
config/: categories.yaml  settings.yaml
data/: snapshot.json  snapshot.meta.json
scripts/: gen_demo_snapshot.py
src/moco_safety/: cli.py  config.py  models.py  normalize.py  snapshot.py
src/moco_safety/digest/: builder.py  sender.py
src/moco_safety/digest/templates/: digest.html.j2  digest.txt.j2
src/moco_safety/fetchers/: __init__.py  crime.py  dispatched.py  fire_ems.py  sex_offenders.py
src/moco_safety/util/: cache.py  geo.py  http.py
tests/: test_digest.py  test_fetchers.py  test_geo.py  test_normalize.py
tests/fixtures/: offender_profile.html  offender_results.html
web/: app.js  index.html  styles.css
